Fix header spacing and mobile button accessibility issues

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -241,6 +241,7 @@
 
 h1 {
   text-align: left;
+  margin-top: 0;
   margin-bottom: 0px;
   font-size: 32px;
   line-height: 40px;
@@ -248,6 +249,15 @@ h1 {
   font-family: var(--font-commit-mono);
   font-weight: 400;
 }
+
+/* Reset all heading elements to remove unwanted user agent margins */
+h1, h2, h3, h4, h5, h6 {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
 .sidebar-title {
   text-align: left;
   margin-top: 24px;
